--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="contenedorPadre">
+    <div class="contenedorPrincipal">
         <div class="encabezado">
             <div class="posts">
                 <h1 class="font">Breathe Code Photo Feed</h1>
@@ -21,10 +21,10 @@
         <div class="posts">
             <div class="photo">
                 <div class="encabezadoFoto">
-                    <span class="fotoName font"> <strong>My first foto</strong></span><span class="date">12/14</span>
+                    <span class="photoName font"> <strong>My first foto</strong></span><span class="date">12/14</span>
                 </div>
                 <div class="photo">
-                    <img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                    <img src="dogs/dog1.jpg"
                         alt="dog">
                 </div>
                 <div class="pieFoto">
@@ -36,10 +36,10 @@
         <div class="posts">
             <div class="photo">
                 <div class="encabezadoFoto">
-                    <span class="fotoName font"> <strong>My second foto</strong></span><span class="date">12/17</span>
+                    <span class="photoName font"> <strong>My second foto</strong></span><span class="date">12/17</span>
                 </div>
                 <div class="photo">
-                    <img src="https://www.sciencemag.org/sites/default/files/styles/inline__450w__no_aspect/public/dogs_1280p_0.jpg?itok=4t_1_fSJ"
+                    <img src="dogs/dog2.jpg"
                         alt="dog">
                 </div>
                 <div class="pieFoto">
@@ -51,10 +51,10 @@
         <div class="posts">
             <div class="photo">
                 <div class="encabezadoFoto">
-                    <span class="fotoName font"> <strong>My third foto</strong></span><span class="date">12/18</span>
+                    <span class="photoName font"> <strong>My third foto</strong></span><span class="date">12/18</span>
                 </div>
                 <div class="photo">
-                    <img src="https://images.pexels.com/photos/1378849/pexels-photo-1378849.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    <img src="dogs/dog3.jpg"
                         alt="dog">
                 </div>
                 <div class="pieFotofinal">
